--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <head>
         <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no,minimal-ui" />
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <meta name="keywords" content="Lehi, Lucky, Ligan, Software, Engineer, Lanex" />
+        <meta name="keywords" content="Lito, Enriquez, Dagodog, Software, Quality, Assurance,Engineer, Lanex" />
         <meta name="description" content="Software Engineer" />
 
         <!--favicon图标-->
@@ -30,7 +30,7 @@
         <!--字体图标cdd-->
         <link href="css/font.css" rel="stylesheet" type="text/css">
 
-        <title>Lehi Lucky Ligan</title>
+        <title>Lito Enriquez Dagodog</title>
     </head>
     <body>
 
@@ -42,11 +42,10 @@
                     <div class="avatar">
                         <a href="javascript:;" class="avatar_pic circle"><em class="circle doing">Details</em></a>
                     </div>
-                    <b class="doing r5"><a target="_blank" href="http://www.magentocommerce.com/certification/directory/dev/1837806/"><img src="images/middle_developer.png"></a></b>
                     <div class="base">
-                        <p class="desc">Hello I'm</p>
-                        <h2>LEHI LUCKY LIGAN</h2>
-                        <p>SENIOR SOFTWARE ENGINEER</p>
+                        <p class="desc">Hello My Name is</p>
+                        <h2>LITO ENRIQUEZ DAGODOG</h2>
+                        <p>SENIOR SOFTWARE QUALITY ASSURANCE ENGINEER</p>
                         <span>
                             <p><i aria-hidden="true" data-icon="&#xe01d;"></i>Cebu, Philippines 6000</p>
                             <p><a href="javascript:;" class="tel_me"><i aria-hidden="true" data-icon="&#xe00b;"></i>Contact Me</a></p>
