--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <a href="javascript:;" class="avatar_pic circle"><em class="circle doing">Details</em></a>
                     </div>
                     <div class="base">
-                        <p class="desc">Hello My Name is</p>
+                        <p class="desc">Hello I'm</p>
                         <h2>LITO ENRIQUEZ DAGODOG</h2>
                         <p>SENIOR SOFTWARE QUALITY ASSURANCE ENGINEER</p>
                         <span>
@@ -617,12 +617,11 @@
             <div class="tip_avatar_con">
                 <div class="tip_right">
                     <p class="en mt">Hello I'm</p>
-                    <h2>Lehi Lucky Ligan</h2>
-                    <p>Senior Software Engineer</p>
-                    <p><a href="http://www.magentocommerce.com/certification/directory/dev/1837806/" style="color:#FFF;" target="_blank">Certified Magento Developer</a></p>
+                    <h2>Lito Enriquez Dagodog</h2>
+                    <p>Senior Software Quality Assurance Engineer</p>
                     <p class="mt20">Contact Information</p>                 
-                    <p><i aria-hidden="true" data-icon="&#xe010;"></i>lehi@po.lanex.co.jp</p>
-                    <p><i aria-hidden="true" data-icon="&#xe010;"></i>lehi@lanexus.com</p>
+                    <p><i aria-hidden="true" data-icon="&#xe010;"></i>lito@po.lanex.co.jp</p>
+                    <p><i aria-hidden="true" data-icon="&#xe010;"></i>lito@lanexus.com</p>
                     <!-- <p><i aria-hidden="true" data-icon="&#xe00b;"></i>17000000000</p>
                     <p><i aria-hidden="true" data-icon="&#xe066;"></i>微信名称</p> -->
                     <p class="mt20"><span class="emailqr"></span></p>
