--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                                 <div class="con">
                                     <h3>Lanex Corporation</h3>
                                     <p>Senior Software Engineer</p>
-                                    <p class="desc">2016.1 - Present</p>
+                                    <p class="desc">2017.08.22 - Present</p>
                                 </div>
                             </li>
                             <li class="clearfix" id="s6">
@@ -173,9 +173,9 @@
                                 <div class="dot"><b></b></div>
                                 <!--内容-->
                                 <div class="con">
-                                    <h3>Vicommerce</h3>
-                                    <p>Software Engineer</p>
-                                    <p class="desc">2013.5 - 2015.12</p>
+                                    <h3>Nokia Networks</h3>
+                                    <p>R&D Engineer</p>
+                                    <p class="desc">May 01,2015 - August 19,2017</p>
                                 </div>
                             </li>
                             <li class="clearfix" id="s5">
