--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <div class="info_area info_left info_content">
 
                         <h5>My Story</h5>
-                        <p class="desc"><em class="count"></em>Graduated from college as Cum Laude with a Bachelor's degree in Information Systems</p>
+                        <p class="desc"><em class="count"></em>Graduated from CITE Technical Institute in Information Technology course</p>
                         <!-- s1~s5 为对应右侧 时间点 -->
                         <p class="desc s1"><em class="count"></em>Developed and completed condominium's Customer Profile Management and Billing System using Visual Basic 6.0</p>
                         <p class="desc s2"><em class="count"></em>Daily content writer of site that covers news, entertainment, techonology, sports, trends and events around the world.</p>
