--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                                 <div class="con">
                                     <h3>Lanex Corporation</h3>
                                     <p>Senior Software Engineer</p>
-                                    <p class="desc">2017.08.22 - Present</p>
+                                    <p class="desc">Aug 22,2017 - Present</p>
                                 </div>
                             </li>
                             <li class="clearfix" id="s6">
@@ -175,7 +175,7 @@
                                 <div class="con">
                                     <h3>Nokia Networks</h3>
                                     <p>R&D Engineer</p>
-                                    <p class="desc">May 01,2015 - August 19,2017</p>
+                                    <p class="desc">May 01,2015 - Aug 19,2017</p>
                                 </div>
                             </li>
                             <li class="clearfix" id="s5">
@@ -185,7 +185,7 @@
                                 <div class="con">
                                     <h3>TIETO GLobal Oy</h3>
                                     <p>R&D Engineer</p>
-                                    <p class="desc">Sept 09,2012 - March 31,2015</p>
+                                    <p class="desc">Sept 2012 - March 31,2015</p>
                                 </div>
                             </li>
                             <li class="clearfix" id="s4">
