--- a/index.html
+++ b/index.html
@@ -62,13 +62,10 @@
                         <h5>My Story</h5>
                         <p class="desc"><em class="count"></em>Graduated from CITE Technical Institute in Information Technology course</p>
                         <!-- s1~s5 为对应右侧 时间点 -->
-                        <p class="desc s1"><em class="count"></em>Developed and completed condominium's Customer Profile Management and Billing System using Visual Basic 6.0</p>
-                        <p class="desc s2"><em class="count"></em>Daily content writer of site that covers news, entertainment, techonology, sports, trends and events around the world.</p>
+                        <p class="desc s1"><em class="count"></em>Lanex </p>
+                        <p class="desc s2"><em class="count"></em>As a R&D Engineer for BTS I&V,I am responsible for testing the functionality(recovery area) of WCDMA Real Element,Using Pegasus as automation tool which is XML base scripting language with python as backend interface towards WCDMA NE.</p>
                         <p class="desc s3"><em class="count"></em>Led the company's Magento team in providing solutions and development approaches to achieve project goals</p>
                         <p class="desc s4"><em class="count"></em>Developed several Wordpress plugins (project-exclusive) which includes Page Builder, Admin Shortcode Picker and API-based plugin for content migration</p>
-                        <p class="desc s5"><em class="count"></em>Passed the Magento examination held at Manila, Philippines</p>
-                        <p class="desc s6"><em class="count"></em>Worked with several Magento, Laravel, Wordpress and CodeIgniter Projects</p>
-                        <p class="desc s7"><em class="count"></em>Exploring a lot of new technologies upon joining LANEX. Worked with several projects that still includes Wordpress, Woocommerce, Laravel and ReactJS.</p>
 
                         <h5>Portfolio</h5>
                         <ul>
@@ -158,7 +155,7 @@
                     <div class="info_area info_right info_timeline">
                         <h5><i aria-hidden="true" data-icon="&#x7d;"></i>Timeline</h5>
                         <ul>
-                             <li class="clearfix top" id="s7">
+                             <li class="clearfix top" id="s1">
                                 <!--list样式-->
                                 <div class="dot"><b></b></div>
                                 <!--内容-->
@@ -168,7 +165,7 @@
                                     <p class="desc">Aug 22,2017 - Present</p>
                                 </div>
                             </li>
-                            <li class="clearfix" id="s6">
+                            <li class="clearfix" id="s2">
                                 <!--list样式-->
                                 <div class="dot"><b></b></div>
                                 <!--内容-->
@@ -178,7 +175,7 @@
                                     <p class="desc">May 01,2015 - Aug 19,2017</p>
                                 </div>
                             </li>
-                            <li class="clearfix" id="s5">
+                            <li class="clearfix" id="s3">
                                 <!--list样式-->
                                 <div class="dot"><b></b></div>
                                 <!--内容-->
