--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                         <!-- s1~s5 为对应右侧 时间点 -->
                         <p class="desc s1"><em class="count"></em>Lanex </p>
                         <p class="desc s2"><em class="count"></em>As a R&D Engineer for BTS I&V,I am responsible for testing the functionality(recovery area) of WCDMA Real Element,Using Pegasus as automation tool which is XML base scripting language with python as backend interface towards WCDMA NE.</p>
-                        <p class="desc s3"><em class="count"></em>Led the company's Magento team in providing solutions and development approaches to achieve project goals</p>
-                        <p class="desc s4"><em class="count"></em>Developed several Wordpress plugins (project-exclusive) which includes Page Builder, Admin Shortcode Picker and API-based plugin for content migration</p>
+                        <p class="desc s3"><em class="count"></em></p>
+                        <p class="desc s4"><em class="count"></em></p>
 
                         <h5>Portfolio</h5>
                         <ul>
