--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <head>
         <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no,minimal-ui" />
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <meta name="keywords" content="Lito, Enriquez, Dagodog, Software, Quality, Assurance,Engineer, Lanex" />
+        <meta name="keywords" content="Lehi, Lucky, Ligan, Software, Engineer, Lanex" />
         <meta name="description" content="Software Engineer" />
 
         <!--favicon图标-->
@@ -30,7 +30,7 @@
         <!--字体图标cdd-->
         <link href="css/font.css" rel="stylesheet" type="text/css">
 
-        <title>Lito Enriquez Dagodog</title>
+        <title>Lehi Lucky Ligan</title>
     </head>
     <body>
 
@@ -42,10 +42,11 @@
                     <div class="avatar">
                         <a href="javascript:;" class="avatar_pic circle"><em class="circle doing">Details</em></a>
                     </div>
+                    <b class="doing r5"><a target="_blank" href="http://www.magentocommerce.com/certification/directory/dev/1837806/"><img src="images/middle_developer.png"></a></b>
                     <div class="base">
                         <p class="desc">Hello I'm</p>
-                        <h2>LITO ENRIQUEZ DAGODOG</h2>
-                        <p>SENIOR SOFTWARE QUALITY ASSURANCE ENGINEER</p>
+                        <h2>LEHI LUCKY LIGAN</h2>
+                        <p>SENIOR SOFTWARE ENGINEER</p>
                         <span>
                             <p><i aria-hidden="true" data-icon="&#xe01d;"></i>Cebu, Philippines 6000</p>
                             <p><a href="javascript:;" class="tel_me"><i aria-hidden="true" data-icon="&#xe00b;"></i>Contact Me</a></p>
@@ -60,12 +61,15 @@
                     <div class="info_area info_left info_content">
 
                         <h5>My Story</h5>
-                        <p class="desc"><em class="count"></em>Graduated from CITE Technical Institute in Information Technology course</p>
+                        <p class="desc"><em class="count"></em>Graduated from college as Cum Laude with a Bachelor's degree in Information Systems</p>
                         <!-- s1~s5 为对应右侧 时间点 -->
-                        <p class="desc s1"><em class="count"></em>Lanex </p>
-                        <p class="desc s2"><em class="count"></em>As a R&D Engineer for BTS I&V,I am responsible for testing the functionality(recovery area) of WCDMA Real Element,Using Pegasus as automation tool which is XML base scripting language with python as backend interface towards WCDMA NE.</p>
-                        <p class="desc s3"><em class="count"></em></p>
-                        <p class="desc s4"><em class="count"></em></p>
+                        <p class="desc s1"><em class="count"></em>Developed and completed condominium's Customer Profile Management and Billing System using Visual Basic 6.0</p>
+                        <p class="desc s2"><em class="count"></em>Daily content writer of site that covers news, entertainment, techonology, sports, trends and events around the world.</p>
+                        <p class="desc s3"><em class="count"></em>Led the company's Magento team in providing solutions and development approaches to achieve project goals</p>
+                        <p class="desc s4"><em class="count"></em>Developed several Wordpress plugins (project-exclusive) which includes Page Builder, Admin Shortcode Picker and API-based plugin for content migration</p>
+                        <p class="desc s5"><em class="count"></em>Passed the Magento examination held at Manila, Philippines</p>
+                        <p class="desc s6"><em class="count"></em>Worked with several Magento, Laravel, Wordpress and CodeIgniter Projects</p>
+                        <p class="desc s7"><em class="count"></em>Exploring a lot of new technologies upon joining LANEX. Worked with several projects that still includes Wordpress, Woocommerce, Laravel and ReactJS.</p>
 
                         <h5>Portfolio</h5>
                         <ul>
@@ -155,34 +159,34 @@
                     <div class="info_area info_right info_timeline">
                         <h5><i aria-hidden="true" data-icon="&#x7d;"></i>Timeline</h5>
                         <ul>
-                             <li class="clearfix top" id="s1">
+                             <li class="clearfix top" id="s7">
                                 <!--list样式-->
                                 <div class="dot"><b></b></div>
                                 <!--内容-->
                                 <div class="con">
                                     <h3>Lanex Corporation</h3>
                                     <p>Senior Software Engineer</p>
-                                    <p class="desc">Aug 22,2017 - Present</p>
+                                    <p class="desc">2016.1 - Present</p>
                                 </div>
                             </li>
-                            <li class="clearfix" id="s2">
+                            <li class="clearfix" id="s6">
                                 <!--list样式-->
                                 <div class="dot"><b></b></div>
                                 <!--内容-->
                                 <div class="con">
-                                    <h3>Nokia Networks</h3>
-                                    <p>R&D Engineer</p>
-                                    <p class="desc">May 01,2015 - Aug 19,2017</p>
+                                    <h3>Vicommerce</h3>
+                                    <p>Software Engineer</p>
+                                    <p class="desc">2013.5 - 2015.12</p>
                                 </div>
                             </li>
-                            <li class="clearfix" id="s3">
+                            <li class="clearfix" id="s5">
                                 <!--list样式-->
                                 <div class="dot"><b></b></div>
                                 <!--内容-->
                                 <div class="con">
-                                    <h3>TIETO GLobal Oy</h3>
-                                    <p>R&D Engineer</p>
-                                    <p class="desc">Sept 2012 - March 31,2015</p>
+                                    <h3>Certification ( Magento )</h3>
+                                    <p>Magento Certified Developer</p>
+                                    <p class="desc">2014.7</p>
                                 </div>
                             </li>
                             <li class="clearfix" id="s4">
@@ -190,9 +194,39 @@
                                 <div class="dot"><b></b></div>
                                 <!--内容-->
                                 <div class="con">
-                                    <h3>NEC Telecom Software Philippines Inc.</h3>
-                                    <p>Senior Test Engineer</p>
-                                    <p class="desc">June 2004 - Sept 2012</p>
+                                    <h3>ClubKoncepto Bacolod</h3>
+                                    <p>Web Developer</p>
+                                    <p class="desc">2013.2 - 2013.12</p>
+                                </div>
+                            </li>
+                            <li class="clearfix" id="s3">
+                                <!--list样式-->
+                                <div class="dot"><b></b></div>
+                                <!--内容-->
+                                <div class="con">
+                                    <h3>Archmages Web Development Experts</h3>
+                                    <p>Lead Web Developer</p>
+                                    <p class="desc">2011.10 - 2013.1</p>
+                                </div>
+                            </li>
+                            <li class="clearfix" id="s2">
+                                <!--list样式-->
+                                <div class="dot"><b></b></div>
+                                <!--内容-->
+                                <div class="con">
+                                    <h3>Quoted News (quotednews.com)</h3>
+                                    <p>Content/News Writer</p>
+                                    <p class="desc">2011.4 - 2011.7</p>
+                                </div>
+                            </li>
+                            <li class="clearfix bottom" id="s1">
+                                <!--list样式-->
+                                <div class="dot"><b></b></div>
+                                <!--内容-->
+                                <div class="con">
+                                    <h3>722 Metropolis Towers</h3>
+                                    <p>Desktop Application Developer</p>
+                                    <p class="desc">2010.10 - 2010.12</p>
                                 </div>
                             </li>
                         </ul>
@@ -584,11 +618,12 @@
             <div class="tip_avatar_con">
                 <div class="tip_right">
                     <p class="en mt">Hello I'm</p>
-                    <h2>Lito Enriquez Dagodog</h2>
-                    <p>Senior Software Quality Assurance Engineer</p>
+                    <h2>Lehi Lucky Ligan</h2>
+                    <p>Senior Software Engineer</p>
+                    <p><a href="http://www.magentocommerce.com/certification/directory/dev/1837806/" style="color:#FFF;" target="_blank">Certified Magento Developer</a></p>
                     <p class="mt20">Contact Information</p>                 
-                    <p><i aria-hidden="true" data-icon="&#xe010;"></i>lito@po.lanex.co.jp</p>
-                    <p><i aria-hidden="true" data-icon="&#xe010;"></i>lito@lanexus.com</p>
+                    <p><i aria-hidden="true" data-icon="&#xe010;"></i>lehi@po.lanex.co.jp</p>
+                    <p><i aria-hidden="true" data-icon="&#xe010;"></i>lehi@lanexus.com</p>
                     <!-- <p><i aria-hidden="true" data-icon="&#xe00b;"></i>17000000000</p>
                     <p><i aria-hidden="true" data-icon="&#xe066;"></i>微信名称</p> -->
                     <p class="mt20"><span class="emailqr"></span></p>
