--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <!--字体图标cdd-->
         <link href="css/font.css" rel="stylesheet" type="text/css">
 
-        <title>谁的简历</title>
+        <title>Lito Enriquez Dagodog</title>
     </head>
     <body>
 
@@ -82,11 +82,11 @@
                     </div>
                     <div class="base">
                         <p class="desc">Hello my name is</p>
-                        <h2>名字</h2>
-                        <p>掌握技能/从事行业</p>
+                        <h2>Lito Enriquez Dagodog</h2>
+                        <p>Senior Quality Assurance Engineer</p>
                         <span>
-                            <p><i aria-hidden="true" data-icon="&#xe01d;"></i>目前身在哈尔滨</p>
-                            <p><a href="javascript:;" class="tel_me"><i aria-hidden="true" data-icon="&#xe00b;"></i>联系Me</a></p>
+                            <p><i aria-hidden="true" data-icon="&#xe01d;"></i>Cebu City Philippines</p>
+                            <p><a href="javascript:;" class="tel_me"><i aria-hidden="true" data-icon="&#xe00b;"></i>Contact Me</a></p>
                         </span>
                     </div>
                 </div>
