--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!--字体图标cdd-->
         <link href="css/font.css" rel="stylesheet" type="text/css">
 
-        <title>Janzell Jurilla</title>
+        <title>Lito Enriquez Dagodog</title>
     </head>
     <body> 
         <!--print button-->
@@ -42,11 +42,11 @@
                     </div>
                     <div class="base">
                         <p class="desc">Hello my name is</p>
-                        <h2>Janzell Jurilla</h2>
-                        <p>Software Engineer / Lanex Corporation</p>
+                        <h2>Lito Enriquez Dagodog</h2>
+                        <p>Senior Quality Assurance Engineer / Lanex Corporation</p>
                         <span>
                             <p><i aria-hidden="true" data-icon="&#xe01d;"></i>Cebu, Philippines 6000</p>
-                            <p><a href="javascript:;" class="tel_me"><i aria-hidden="true" data-icon="&#xe00b;"></i>Say Hello!</a></p>
+                            <p><a href="javascript:;" class="tel_me"><i aria-hidden="true" data-icon="&#xe00b;"></i>Contact Me!</a></p>
                         </span>
                     </div>
                 </div>
