--- a/index.html
+++ b/index.html
@@ -632,12 +632,12 @@
             <div class="tip_avatar_con">
                 <div class="tip_right">
                     <p class="en mt">Hello my name is</p>
-                    <h2>Janzell Jurilla</h2>
-                    <p>Software Engineer</p>
+                    <h2>Lito Enriquez Dagodog</h2>
+                    <p>Senior Quality Assurance Engineer</p>
                     <p class="mt20">Contact Information</p>                 
-                    <p><i aria-hidden="true" data-icon="&#xe010;"></i>janzell1989@gmail.com</p>
-                    <p><i aria-hidden="true" data-icon="&#xe00b;"></i>+639298791973</p>
-                    <p><i aria-hidden="true" data-icon="&#xe066;"></i>skype:janzell.v.jurilla</p>
+                    <p><i aria-hidden="true" data-icon="&#xe010;"></i>lito@lanexus.com</p>
+                    <p><i aria-hidden="true" data-icon="&#xe010;"></i>lito@po.lanex.co.jp</p>
+                    <p><i aria-hidden="true" data-icon="&#xe066;"></i>skype:lito@lanexus.com</p>
                     <p class="mt20"><span class="wechat"></span></p>
                 </div>
                 <!--如果依然使用该头像请不要删掉()里的内容-->
