--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <!--字体图标cdd-->
         <link href="css/font.css" rel="stylesheet" type="text/css">
 
-        <title>Lehi Lucky Ligan</title>
+        <title>Lito Enriquez Dagodog</title>
     </head>
     <body>
 
@@ -45,8 +45,8 @@
                     <b class="doing r5"><a target="_blank" href="http://www.magentocommerce.com/certification/directory/dev/1837806/"><img src="images/middle_developer.png"></a></b>
                     <div class="base">
                         <p class="desc">Hello I'm</p>
-                        <h2>LEHI LUCKY LIGAN</h2>
-                        <p>SENIOR SOFTWARE ENGINEER</p>
+                        <h2>Lito Enriquez Dagodog</h2>
+                        <p>Senior Quality Assurance Engineer</p>
                         <span>
                             <p><i aria-hidden="true" data-icon="&#xe01d;"></i>Cebu, Philippines 6000</p>
                             <p><a href="javascript:;" class="tel_me"><i aria-hidden="true" data-icon="&#xe00b;"></i>Contact Me</a></p>
@@ -618,12 +618,12 @@
             <div class="tip_avatar_con">
                 <div class="tip_right">
                     <p class="en mt">Hello I'm</p>
-                    <h2>Lehi Lucky Ligan</h2>
-                    <p>Senior Software Engineer</p>
+                    <h2>Lito Enriquez Dagodog</h2>
+                    <p>Senior Quality Assurance Engineer</p>
                     <p><a href="http://www.magentocommerce.com/certification/directory/dev/1837806/" style="color:#FFF;" target="_blank">Certified Magento Developer</a></p>
                     <p class="mt20">Contact Information</p>                 
-                    <p><i aria-hidden="true" data-icon="&#xe010;"></i>lehi@po.lanex.co.jp</p>
-                    <p><i aria-hidden="true" data-icon="&#xe010;"></i>lehi@lanexus.com</p>
+                    <p><i aria-hidden="true" data-icon="&#xe010;"></i>lito@po.lanex.co.jp</p>
+                    <p><i aria-hidden="true" data-icon="&#xe010;"></i>lito@lanexus.com</p>
                     <!-- <p><i aria-hidden="true" data-icon="&#xe00b;"></i>17000000000</p>
                     <p><i aria-hidden="true" data-icon="&#xe066;"></i>微信名称</p> -->
                     <p class="mt20"><span class="emailqr"></span></p>
