--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
                     <div class="avatar">
                         <a href="javascript:;" class="avatar_pic circle"><em class="circle doing">Details</em></a>
                     </div>
-                    <b class="doing r5"><a target="_blank" href="http://www.magentocommerce.com/certification/directory/dev/1837806/"><img src="images/middle_developer.png"></a></b>
                     <div class="base">
                         <p class="desc">Hello I'm</p>
                         <h2>Lito Enriquez Dagodog</h2>
@@ -620,12 +619,11 @@
                     <p class="en mt">Hello I'm</p>
                     <h2>Lito Enriquez Dagodog</h2>
                     <p>Senior Quality Assurance Engineer</p>
-                    <p><a href="http://www.magentocommerce.com/certification/directory/dev/1837806/" style="color:#FFF;" target="_blank">Certified Magento Developer</a></p>
                     <p class="mt20">Contact Information</p>                 
                     <p><i aria-hidden="true" data-icon="&#xe010;"></i>lito@po.lanex.co.jp</p>
                     <p><i aria-hidden="true" data-icon="&#xe010;"></i>lito@lanexus.com</p>
-                    <!-- <p><i aria-hidden="true" data-icon="&#xe00b;"></i>17000000000</p>
-                    <p><i aria-hidden="true" data-icon="&#xe066;"></i>微信名称</p> -->
+                    <p><i aria-hidden="true" data-icon="&#xe00b;"></i>+639053116925</p>
+                    <!--<p><i aria-hidden="true" data-icon="&#xe066;"></i>微信名称</p> -->
                     <p class="mt20"><span class="emailqr"></span></p>
                 </div>
                 <!--如果依然使用该头像请不要删掉()里的内容-->
