--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
                                 <!--内容-->
                                 <div class="con">
                                     <h3>Lanex Corporation</h3>
-                                    <p>Senior Software Engineer</p>
-                                    <p class="desc">2016.1 - Present</p>
+                                    <p>Senior Quality Assurance Engineer</p>
+                                    <p class="desc">Aug. 22,2017 - Present</p>
                                 </div>
                             </li>
                             <li class="clearfix" id="s6">
@@ -173,9 +173,9 @@
                                 <div class="dot"><b></b></div>
                                 <!--内容-->
                                 <div class="con">
-                                    <h3>Vicommerce</h3>
-                                    <p>Software Engineer</p>
-                                    <p class="desc">2013.5 - 2015.12</p>
+                                    <h3>Nokia Networks</h3>
+                                    <p>R&D Engineer</p>
+                                    <p class="desc">April 01,2015 - Aug. 19,2017</p>
                                 </div>
                             </li>
                             <li class="clearfix" id="s5">
@@ -183,9 +183,9 @@
                                 <div class="dot"><b></b></div>
                                 <!--内容-->
                                 <div class="con">
-                                    <h3>Certification ( Magento )</h3>
-                                    <p>Magento Certified Developer</p>
-                                    <p class="desc">2014.7</p>
+                                    <h3>Tieto Global Oy</h3>
+                                    <p>R&D Engineer</p>
+                                    <p class="desc">Sept. 2012 - March 31,2015</p>
                                 </div>
                             </li>
                             <li class="clearfix" id="s4">
@@ -193,39 +193,9 @@
                                 <div class="dot"><b></b></div>
                                 <!--内容-->
                                 <div class="con">
-                                    <h3>ClubKoncepto Bacolod</h3>
-                                    <p>Web Developer</p>
-                                    <p class="desc">2013.2 - 2013.12</p>
-                                </div>
-                            </li>
-                            <li class="clearfix" id="s3">
-                                <!--list样式-->
-                                <div class="dot"><b></b></div>
-                                <!--内容-->
-                                <div class="con">
-                                    <h3>Archmages Web Development Experts</h3>
-                                    <p>Lead Web Developer</p>
-                                    <p class="desc">2011.10 - 2013.1</p>
-                                </div>
-                            </li>
-                            <li class="clearfix" id="s2">
-                                <!--list样式-->
-                                <div class="dot"><b></b></div>
-                                <!--内容-->
-                                <div class="con">
-                                    <h3>Quoted News (quotednews.com)</h3>
-                                    <p>Content/News Writer</p>
-                                    <p class="desc">2011.4 - 2011.7</p>
-                                </div>
-                            </li>
-                            <li class="clearfix bottom" id="s1">
-                                <!--list样式-->
-                                <div class="dot"><b></b></div>
-                                <!--内容-->
-                                <div class="con">
-                                    <h3>722 Metropolis Towers</h3>
-                                    <p>Desktop Application Developer</p>
-                                    <p class="desc">2010.10 - 2010.12</p>
+                                    <h3>NEC Telecom Software Philippines Inc.</h3>
+                                    <p>Senior Test Engineer</p>
+                                    <p class="desc">June 2004 - Sept. 2012</p>
                                 </div>
                             </li>
                         </ul>
