--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
                     <div class="info_area info_left info_content">
 
                         <h5>My Story</h5>
-                        <p class="desc"><em class="count"></em>Graduated from college as Cum Laude with a Bachelor's degree in Information Systems</p>
+                        <p class="desc"><em class="count"></em>Graduated from CITE Technical Institute in Information Technology course.</p>
                         <!-- s1~s5 为对应右侧 时间点 -->
-                        <p class="desc s1"><em class="count"></em>Developed and completed condominium's Customer Profile Management and Billing System using Visual Basic 6.0</p>
+                        <!--<p class="desc s1"><em class="count"></em>Developed and completed condominium's Customer Profile Management and Billing System using Visual Basic 6.0</p>
                         <p class="desc s2"><em class="count"></em>Daily content writer of site that covers news, entertainment, techonology, sports, trends and events around the world.</p>
-                        <p class="desc s3"><em class="count"></em>Led the company's Magento team in providing solutions and development approaches to achieve project goals</p>
+                        <p class="desc s3"><em class="count"></em>Led the company's Magento team in providing solutions and development approaches to achieve project goals</p> -->
                         <p class="desc s4"><em class="count"></em>Developed several Wordpress plugins (project-exclusive) which includes Page Builder, Admin Shortcode Picker and API-based plugin for content migration</p>
                         <p class="desc s5"><em class="count"></em>Passed the Magento examination held at Manila, Philippines</p>
                         <p class="desc s6"><em class="count"></em>Worked with several Magento, Laravel, Wordpress and CodeIgniter Projects</p>
