--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
                     <p class="mt20"><span class="emailqr"></span></p>
                 </div>
                 <!--如果依然使用该头像请不要删掉()里的内容-->
-                <!-- <p class="desc">Cartoon just like me (Design by Jameskelly)</p> -->
+                <p class="desc">Cartoon just like me (Design by Jameskelly)</p>
             </div>
         </div>
         <div class="tip_avatar_bg"></div>
