--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@
                                 <div class="dot"><b></b></div>
                                 <!--内容-->
                                 <div class="con">
-                                    <h3>Sr. Software Engineer</h3>
-                                    <p>Lanex Corporation</p>
-                                    <p class="desc">2016.06 - present</p>
+                                    <h3>Lanex Corporation</h3>
+                                    <p>Senior Quality Assurance Engineer</p>
+                                    <p class="desc">Aug. 22,2017 - present</p>
                                 </div>
                             </li>
                             <li class="clearfix" id="s4">
@@ -158,9 +158,9 @@
                                 <div class="dot"><b></b></div>
                                 <!--内容-->
                                 <div class="con">
-                                    <h3>Sr. Software Engineer</h3>
-                                    <p>ViCommerce</p>
-                                    <p class="desc">2013.4 - 2016.6</p>
+                                    <h3>Nokia Networks</h3>
+                                    <p>R&D Engineer</p>
+                                    <p class="desc">April 1,2015 - August 19,2017</p>
                                 </div>
                             </li>
                             <li class="clearfix" id="s3">
@@ -168,9 +168,9 @@
                                 <div class="dot"><b></b></div>
                                 <!--内容-->
                                 <div class="con">
-                                    <h3>Web Developer</h3>
-                                    <p>KLONC Pte Ltd</p>
-                                    <p class="desc">2012.10 - 2013.10</p>
+                                    <h3>Tieto Global Oy</h3>
+                                    <p>R&D Engineer</p>
+                                    <p class="desc">Sept 2012 - March 31,2015</p>
                                 </div>
                             </li>
                             <li class="clearfix" id="s2">
@@ -178,33 +178,12 @@
                                 <div class="dot"><b></b></div>
                                 <!--内容-->
                                 <div class="con">
-                                    <h3>Software Engineer</h3>
-                                    <p>Global Fusion</p>
-                                    <p class="desc">2011.03 - 2013.05</p>
+                                    <h3>NEC Telecom Software Philippines Inc.</h3>
+                                    <p>Senior Test Engineer</p>
+                                    <p class="desc">June 2004 - Sept. 2012</p>
                                 </div>
                             </li>
                             
-                            <li class="clearfix" id="s1">
-                                <!--list样式-->
-                                <div class="dot"><b></b></div>
-                                <!--内容-->
-                                <div class="con">
-                                    <h3>Web Application Developer</h3>
-                                    <p>Traxbarn Multimedia Harmony</p>
-                                    <p class="desc">2010.05 - 2011.06</p>
-                                </div>
-                            </li>
-
-                            <li class="clearfix bottom" id="s0">
-                                <!--list样式-->
-                                <div class="dot"><b></b></div>
-                                <!--内容-->
-                                <div class="con">
-                                    <h3>Web Developer &amp; Headshot Editor</h3>
-                                    <p>LoveTwelve Inc.</p>
-                                    <p class="desc">2010.12 - 2013.05</p>
-                                </div>
-                            </li>
                         </ul>
 
                         <h5>Skills</h5>
